added description for directing to our open source repo

--- a/app/views/projects/landing.html.erb
+++ b/app/views/projects/landing.html.erb
@@ -49,4 +49,5 @@
 </div>
 <div name="contact" id="contact" class="page">
 	<h2 class="title">CONTACT US</h2>
+  <p class="about-description">This website was created as part of the CS for Social Good class (CS 90SI) at Stanford. This is an open source project hosted on <a href="https://github.com/delhigov/manifesto-tracker">github</a>. Please visit our github page for updates on our progress (this is still a work in progress), to give feedback, report bugs, or contribute.</p>
 </div>
