--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -27,7 +27,9 @@
       
       <div><%= u.description %></div>
       <div>Updated at: <%= u.updated_at %>
-        <%= link_to "Edit", controller: "updates", action: "edit", project_id: @project.id, id: u.id %>
+        <% if user_signed_in? %>
+          <%= link_to "Edit", controller: "updates", action: "edit", project_id: @project.id, id: u.id %>
+        <% end %>
       </div>
     <% end %>
 
