--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -37,4 +37,19 @@
   </div>
   <div id="disqus_thread" class="col-md-10 col-md-offset-1"></div>
 
+<script>
+  var disqus_config = function () {
+      this.page.url = window.href;  // Replace PAGE_URL with your page's canonical URL variable
+      this.page.identifier = window.location.pathname; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+  };
+
+  (function() {  // REQUIRED CONFIGURATION VARIABLE: EDIT THE SHORTNAME BELOW
+      var d = document, s = d.createElement('script');
+
+      s.src = '//manifestotracker.disqus.com/embed.js'; 
+
+      s.setAttribute('data-timestamp', +new Date());
+      (d.head || d.body).appendChild(s);
+  })();
+</script>
 </div>
