implemented search bar

--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -7,6 +7,15 @@
   top: 60px;
 }
 
+#search-bar {
+  margin: 20px 0;
+}
+
+.search-bar {
+  width: 70%;
+  position: relative;
+  left:15%;
+}
 #progress-meters {
   position: relative;
   top: 1.5em;
