--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,8 +20,8 @@
         <li><a href="/#contact">CONTACT</a></li>
         <li id="user-widget">
           <% if current_user %>
-            Welcome <strong><%= current_user.name %></strong>!
             <%= link_to "LOG OUT", signout_path, id: "sign_out" %>
+            <%= image_tag("http://graph.facebook.com/"+current_user.uid+"/picture?type=square", :alt => "rss feed") %>
           <% else %>
             <%= link_to "LOG IN", "/auth/facebook", id: "sign_in" %>
           <% end %>
