--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,9 +1,9 @@
 <div class="container-fluid page-full">
 
   <a href="<%= projects_path %>" class="back-link">&#8592 Go back to Projects</a>
-  
-  <h2 class="text-center"><%= @project.title %> 
-    <% if user_signed_in? %>
+
+  <h2 class="text-center"><%= @project.title %>
+    <% if true %>
     - <%= link_to "Edit", controller: "projects", action: "edit", id: @project.id %>
     <% end %>
   </h2>
@@ -11,10 +11,10 @@
 
   <div class="col-md-10 col-md-offset-1">
     <p><%= @project.description %></p>
- 
+
     <hr/>
     <h4>Updates</h4>
-    <% if user_signed_in? %>
+    <% if current_user %>
         <%= link_to "Add Update", controller: "updates", action: "new", project_id: @project.id %>
     <% end %>
 
@@ -24,10 +24,10 @@
         (<%= link_to "Link", u.url %>)
       <% end %>
       </h5>
-      
+
       <div><%= u.description %></div>
       <div>Updated at: <%= u.updated_at %>
-        <% if user_signed_in? %>
+        <% if true %>
           <%= link_to "Edit", controller: "updates", action: "edit", project_id: @project.id, id: u.id %>
         <% end %>
       </div>
@@ -46,7 +46,7 @@
   (function() {  // REQUIRED CONFIGURATION VARIABLE: EDIT THE SHORTNAME BELOW
       var d = document, s = d.createElement('script');
 
-      s.src = '//manifestotracker.disqus.com/embed.js'; 
+      s.src = '//manifestotracker.disqus.com/embed.js';
 
       s.setAttribute('data-timestamp', +new Date());
       (d.head || d.body).appendChild(s);
