--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,5 +41,51 @@
     <%= yield %>
 </div>
 
+<script>
+
+jQuery(function() {
+  $('body').prepend('<div id="fb-root"></div>');
+  return $.ajax({
+    url: window.location.protocol + "//connect.facebook.net/en_US/all.js",
+    dataType: 'script',
+    cache: true
+  });
+});
+
+window.fbAsyncInit = function() {
+  FB.init({
+    appId      : <%= Rails.application.secrets.fb_app_id %>,
+    xfbml      : true,
+    version    : 'v2.5',
+    cookie     : true
+  });
+  $('#sign_in').click(function(e) {
+    e.preventDefault();
+    return FB.login(function(response) {
+      if (response.authResponse) {
+        return window.location = '/auth/facebook/callback';
+      }
+    });
+  });
+  return $('#sign_out').click(function(e) {
+    FB.getLoginStatus(function(response) {
+      if (response.authResponse) {
+        return FB.logout();
+      }
+    });
+    return true;
+  });
+};
+
+(function(d, s, id){
+   var js, fjs = d.getElementsByTagName(s)[0];
+   if (d.getElementById(id)) {return;}
+   js = d.createElement(s); js.id = id;
+   js.src = "//connect.facebook.net/en_US/sdk.js";
+   fjs.parentNode.insertBefore(js, fjs);
+ }(document, 'script', 'facebook-jssdk'));
+
+</script>
+
 </body>
 </html>
