--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,55 +1,101 @@
-<div class="container-fluid page-full">
+<div class="container aapt-page">
 
-  <a href="<%= projects_path %>" class="back-link">&#8592 Go back to Projects</a>
+    <div class="project-title">
 
-  <h2 class="text-center"><%= @project.title %>
-    <% if true %>
-    - <%= link_to "Edit", controller: "projects", action: "edit", id: @project.id %>
-    <% end %>
-  </h2>
-  <h4 class="text-center <%= status_color(@project.status) %>"><%= format_status(@project.status) %></h4>
+        <!-- <a href="<%= projects_path %>" class="back-link"> &#8592 Go back to Projects</a> -->
 
-  <div class="col-md-10 col-md-offset-1">
-    <p><%= @project.description %></p>
+        <h2> <%=  @project.sno.to_s.rjust(2, "0") + " /"%>
+            <a href="<%= projects_path %>"> 70 </a> <%=" : " + @project.title %> </h2>
 
-    <hr/>
-    <h4>Updates</h4>
-    <% if current_user %>
-        <%= link_to "Add Update", controller: "updates", action: "new", project_id: @project.id %>
-    <% end %>
+        <!-- <h2> <%= @project.title %> </h2> -->
 
-    <% @updates.each do |u| %>
-      <h5><%= u.title %>
-      <% if u.url.present? %>
-        (<%= link_to "Link", u.url %>)
-      <% end %>
-      </h5>
+        <span class="status <%= status_color(@project.status) %>">
 
-      <div><%= u.description %></div>
-      <div>Updated at: <%= u.updated_at %>
-        <% if true %>
-          <%= link_to "Edit", controller: "updates", action: "edit", project_id: @project.id, id: u.id %>
-        <% end %>
-      </div>
-    <% end %>
+            <%= format_status(@project.status) %> </span>
 
-    <hr />
-  </div>
-  <div id="disqus_thread" class="col-md-10 col-md-offset-1"></div>
+        <!-- <% if true %> -->
+            <!-- <%= link_to "(Edit)", controller: "projects", action: "edit", id: @project.id %> -->
+        <!-- <% end %> -->
 
-<script>
-  var disqus_config = function () {
-      this.page.url = window.href;  // Replace PAGE_URL with your page's canonical URL variable
-      this.page.identifier = window.location.pathname; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-  };
+        </div>
 
-  (function() {  // REQUIRED CONFIGURATION VARIABLE: EDIT THE SHORTNAME BELOW
-      var d = document, s = d.createElement('script');
+    <div class="project-info">
 
-      s.src = '//manifestotracker.disqus.com/embed.js';
+        <p> <%= @project.description %> </p>
 
-      s.setAttribute('data-timestamp', +new Date());
-      (d.head || d.body).appendChild(s);
-  })();
-</script>
+        </div>
+
+    <div class="project-responses offical">
+
+        <h4> Official Responses </h4>
+
+            <% if current_user %>
+                <%= link_to "Add Response", controller: "updates", action: "new", project_id: @project.id %>
+            <% end %>
+
+            <% @updates.each do |u| %>
+
+                <h5> <%= u.title %> </h5>
+
+                <p> <%= u.description %> </p>
+
+                <p> Updated at: <%= u.updated_at %> </p>
+
+                <% if u.url.present? %>
+                    <%= link_to "Link", u.url %>
+                <% end %>
+
+                <% if true %>
+                    <%= link_to "Edit", controller: "updates", action: "edit", project_id: @project.id, id: u.id %>
+                <% end %>
+
+            <% end %>
+
+        </div>
+
+    <div class="project-responses public">
+
+        <h4> Public Responses </h4>
+
+            <% if current_user %>
+                <%= link_to "Add Response", controller: "updates", action: "new", project_id: @project.id %>
+            <% end %>
+
+            <% @updates.each do |u| %>
+
+                <h5> <%= u.title %> </h5>
+
+                <p> <%= u.description %> </p>
+
+                <p> Updated at: <%= u.updated_at %> </p>
+
+                <% if u.url.present? %>
+                    <%= link_to "Link", u.url %>
+                <% end %>
+
+                <% if true %>
+                    <%= link_to "Edit", controller: "updates", action: "edit", project_id: @project.id, id: u.id %>
+                <% end %>
+
+            <% end %>
+
+        </div>
+
+    <div id="disqus_thread"> </div>
+
+    <script>
+        // var disqus_config = function () {
+        //     this.page.url = window.href;  // Replace PAGE_URL with your page's canonical URL variable
+        //     this.page.identifier = window.location.pathname; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+        // };
+
+        // (function() {  // REQUIRED CONFIGURATION VARIABLE: EDIT THE SHORTNAME BELOW
+        //     var d = document, s = d.createElement('script');
+
+        //     s.src = '//manifestotracker.disqus.com/embed.js';
+
+        //     s.setAttribute('data-timestamp', +new Date());
+        //     (d.head || d.body).appendChild(s);
+        // })();
+    </script>
 </div>
