--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -25,17 +25,38 @@
 
 .project-info {
 
-  margin-bottom: 20px;
+  margin-bottom: 50px;
   font-size: 18px;
   line-height: 36px;
   text-align: justify;
-
-  // padding-bottom: 20px;
 }
 
-.project-responses {
+.project-responses-heading {
 
-  margin: 50px 0;
+  margin-bottom: 50px;
+  font-size: 18px;
+  background: #F9F9F9;
+  padding: 20px;
+}
+
+.project-responses-heading h4 {
+
+    width: 50%;
+    margin: 0;
+    display: inline-block;
+    line-height: 32px;
+
+}
+
+.project-responses-heading .updates-sort {
+
+  float: right;
+  margin-left: 20px;
+}
+
+.project-responses-heading .updates-sort input {
+
+  margin-right: 15px;
 }
 
 .page-full {
