--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container" class="navbar-text">
     <div class="navbar-header">
-      <a class="navbar-brand" href="/">AAP Tracker & Feedback</a>
+      <a class="navbar-brand" href="/">AAP Tracker</a>
     </div>
     <div>
       <ul class="nav navbar-nav navbar-right">
