--- a/app/views/updates/new.html.erb
+++ b/app/views/updates/new.html.erb
@@ -1,30 +1,29 @@
-<div class="container-fluid page-full">
-  <%= link_to "Back", :back, class: "back-link" %>
-  <h1 class="text-center">New Update for <%= @project.title %></h1>
+<div class="container aapt-page">
 
-  <div class="col-md-10 col-md-offset-1">
-    <%= form_for @update, url: {action: 'create'} , :html=>{:method=>:post} do |f| %>
+    <!-- <%= link_to "Back", :back, class: "back-link" %> -->
 
-    <%= f.hidden_field :project_id, :value => @project.id %>
-    
-    <div class="form-group">
-      <%= label_tag(:title, "Update Title") %>
-      <%= f.text_field :title, :class => "form-control" %>
+    <h1> New Update for <%= @project.title %> </h1>
+
+    <div>
+
+        <%= form_for @update, url: {action: 'create'} , :html=>{:method=>:post} do |f| %>
+
+            <%= f.hidden_field :project_id, :value => @project.id %>
+
+            <div class="form-group">
+                <%= label_tag(:title, "Date") %>
+                <%= f.text_field :title, :class => "form-control" %>
+                </div>
+
+            <div class="form-group">
+                <%= label_tag(:description, "Update") %>
+                <%= f.text_area :description, :class => "form-control" %>
+                </div>
+
+            <%= submit_tag("Save", class: "btn btn-default") %>
+
+        <% end %>
+
+        </div>
+
     </div>
-
-    <div class="form-group">
-      <%= label_tag(:url, "URL") %>
-      <%= f.text_field :url, :class => "form-control" %>
-    </div>
-
-    <div class="form-group">
-      <%= label_tag(:description, "Update Description") %>
-      <%= f.text_area :description, :class => "form-control" %>
-    </div>
-
-    <%= submit_tag("Save", class: "btn btn-default") %>
-
-  <% end %>
-  </div>
-
-</div>
