--- a/app/assets/stylesheets/update.scss
+++ b/app/assets/stylesheets/update.scss
@@ -1,3 +1,46 @@
 // Place all the styles related to the update controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+form.new_update {
+
+	width: 100%;
+	font-size: 18px;
+}
+
+form.new_update .form-group,
+form.new_update button[type=submit],
+form.new_update a.btn {
+
+	width: 500px;
+	margin: 30px 0;
+	float: left;
+	margin: 30px 35px 0 35px;
+}
+
+form.new_update button[type=submit],
+form.new_update a.btn, {
+
+	width: auto;
+	font-size: 18px;
+	padding: 10px 25px;
+	float: left;
+	margin: 10px 30px 0 0;
+}
+
+form.new_update .form-group.buttons {
+
+	clear: both;
+}
+
+form.new_update .form-group label {
+
+	margin: 20px 0;
+}
+
+form.new_update .form-control {
+
+	font-size: 18px;
+	padding: 25px;
+	margin: 10px 0;
+}
