--- a/app/views/updates/new.html.erb
+++ b/app/views/updates/new.html.erb
@@ -2,28 +2,39 @@
 
     <!-- <%= link_to "Back", :back, class: "back-link" %> -->
 
-    <h1> New Update for <%= @project.title %> </h1>
+    <div class="project-title">
 
-    <div>
+        <!-- <a href="<%= projects_path %>" class="back-link"> &#8592 Go back to Projects</a> -->
 
-        <%= form_for @update, url: {action: 'create'} , :html=>{:method=>:post} do |f| %>
+        <h2> <a href="<%= project_path(@project.sno) %>"> <%= @project.sno.to_s.rjust(2, "0") %> </a> /
+            <a href="<%= projects_path %>"> 70 </a> <%=" : " + @project.title %> </h2>
 
-            <%= f.hidden_field :project_id, :value => @project.id %>
+        <span class="status">
 
-            <div class="form-group">
-                <%= label_tag(:description, "Update") %>
-                <%= f.text_area :description, :class => "form-control" %>
-                </div>
-
-            <div class="form-group">
-              <%= label_tag(:url, "URL") %>
-              <%= f.text_field :url, :class => "form-control" %>
-            </div>
-
-            <%= submit_tag("Save", class: "btn btn-default") %>
-
-        <% end %>
+            New Response </span>
 
         </div>
 
-    </div>
+    <%= form_for @update, url: {action: 'create'} , :html=>{:method=>:post} do |f| %>
+
+        <%= f.hidden_field :project_id, :value => @project.id %>
+
+        <div class="form-group">
+            <%= label_tag(:description, "Response") %>
+            <%= f.text_area :description, :rows => 8, :class => "form-control" %> </div>
+
+        <div class="form-group">
+          <%= label_tag(:url, "Links") %>
+          <%= f.text_field :url, :class => "form-control" %> </div>
+
+        <div class="form-group">
+          <%= label_tag(:url, "Date") %>
+          <%= f.text_field :url, :class => "form-control" %> </div>
+
+        <div class="form-group buttons">
+            <%= button_tag("Save", :type => "submit", class: "btn btn-success") %>
+            <%= link_to "Cancel", project_path(@project.id), class: 'btn btn-default' %>
+
+    <% end %>
+
+</div>
