--- a/app/assets/stylesheets/update.scss
+++ b/app/assets/stylesheets/update.scss
@@ -10,7 +10,8 @@ form.new_update {
 
 form.new_update .form-group,
 form.new_update button[type=submit],
-form.new_update a.btn {
+form.new_update a.btn,
+form.new_update .recaptcha {
 
 	width: 500px;
 	margin: 30px 0;
@@ -25,7 +26,7 @@ form.new_update a.btn, {
 	font-size: 18px;
 	padding: 10px 25px;
 	float: left;
-	margin: 10px 30px 0 0;
+	margin: 40px 30px 0 0;
 }
 
 form.new_update .form-group.buttons {
