--- a/app/views/updates/new.html.erb
+++ b/app/views/updates/new.html.erb
@@ -32,6 +32,7 @@
           <%= f.text_field :url, :class => "form-control" %> </div>
 
         <div class="form-group buttons">
+            <%= recaptcha_tags %>
             <%= button_tag("Save", :type => "submit", class: "btn btn-success") %>
             <%= link_to "Cancel", project_path(@project.id), class: 'btn btn-default' %>
 
