add official flag to updates model

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -65,6 +65,7 @@
                 <!-- <h5> <%= u.title %> </h5> -->
 
                 <span class="updated-at"> <%= u.updated_at %> </span>
+                <span class="updated-at"> <%= u.official %> </span>
 
                 <!-- <% if true %> -->
                     <!-- <%= link_to "Edit", { controller: "updates", action: "edit", project_id: @project.id, id: u.id }, class: "edit"  %> -->
