--- a/app/views/projects/landing.html.erb
+++ b/app/views/projects/landing.html.erb
@@ -3,14 +3,17 @@
 
     <div id="landing-content" class="row">
 
-      <%= doughnut_chart @data, @options %>
+      <div class="positive-chart col-md-6 col-sm-12">
+        <%= doughnut_chart @data, @options %>
+        <p> Promises in green are those with more than 50% positive public responses over time. </p>
+          </div>
 
       <div class="numbers col-md-6 col-sm-12">
 
         <div class="heading">
           This Week </div>
 
-        <p> Projects with Responses:
+        <p> Promises with Responses:
           <span> 45 / 70 </span>  </p>
 
         <p> Official Responses:
@@ -25,7 +28,7 @@
         <div class="links">
           <%= link_to "ALL PROMISES", projects_path, id: "enter-button" %>
           <% if current_user && current_user.volunteer %>
-              <%= link_to "MODERATE", updates_path, id: "enter-button" %> </div>
+              <%= link_to "ALL RESPONSES", updates_path, id: "enter-button" %> </div>
           <% end %>
 
       </div>
