--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -65,7 +65,8 @@
                 <!-- <h5> <%= u.title %> </h5> -->
 
                 <span class="updated-at"> <%= u.updated_at %> </span>
-                <span class="updated-at"> <%= u.official %> </span>
+                <span class="updated-at"> Official: <%= u.official %> </span>
+                <span class="updated-at"> Positive: <%= u.positive %> </span>
 
                 <!-- <% if true %> -->
                     <!-- <%= link_to "Edit", { controller: "updates", action: "edit", project_id: @project.id, id: u.id }, class: "edit"  %> -->
