add datetime_select for event_occured in updates, and use it to sort

--- a/app/assets/stylesheets/update.scss
+++ b/app/assets/stylesheets/update.scss
@@ -44,6 +44,11 @@ form.new_update .form-group label {
 	margin: 20px 0;
 }
 
+form.new_update .form-group label.date-label {
+
+	margin-right: 30px;
+}
+
 form.new_update .form-control {
 
 	font-size: 18px;
