--- a/app/views/projects/landing.html.erb
+++ b/app/views/projects/landing.html.erb
@@ -83,5 +83,7 @@
 </div>
 <div name="contact" id="contact" class="page">
 	<h2 class="title">CONTACT US</h2>
-  <p class="about-description">This website was created as part of the CS for Social Good class (CS 90SI) at Stanford. This is an open source project hosted on <a href="https://github.com/delhigov/manifesto-tracker">github</a>. Please visit our github page for updates on our progress (this is still a work in progress), to give feedback, report bugs, or contribute.</p>
+  <p class="about-description">This website was created as part of the CS for Social Good class (CS 90SI) at Stanford. This is an open source project hosted on <a href="https://github.com/delhigov/manifesto-tracker">github</a>. Please visit our github page for updates on our progress (this is still a work in progress), to give feedback, report bugs, or contribute. Here is our
+
+    <a href="/privacy_policy.html"> Privacy Policy </a>. </p>
 </div>
