move link inside description in responses list

--- a/app/assets/stylesheets/update.scss
+++ b/app/assets/stylesheets/update.scss
@@ -103,3 +103,7 @@ form.new_update .form-control {
     margin: 40px 0;
     line-height: 40px;
 }
+
+.updates-table .update-link {
+    margin: 0 0 0 10px;
+}
