fix landing page background bug

--- a/app/views/projects/landing.html.erb
+++ b/app/views/projects/landing.html.erb
@@ -28,8 +28,9 @@
         <div class="links">
           <%= link_to "ALL PROMISES", projects_path, id: "enter-button" %>
           <% if current_user && current_user.volunteer %>
-              <%= link_to "ALL RESPONSES", updates_path, id: "enter-button" %> </div>
+              <%= link_to "ALL RESPONSES", updates_path, id: "enter-button" %>
           <% end %>
+        </div>
 
       </div>
 
