--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,76 +1,77 @@
-<div class="container-fluid banner">
-  <div class="title">
-    <h1>MANIFESTO TRACKER</h1>
-    <div class="byline">
-    <p>Aam Aadmi Party (AAP) made 70 promises during the 2015 Delhi Elections.<br/>
-    Track them here.</p>
-    </div>
-  </div>
-</div>
+<div class="container aapt-page">
 
-<div class="container-fluid" id="search-bar">
-  <div class="search-bar">
+  <div id="search-bar" class="project-search">
+
     <%= form_tag projects_path, :role => "search", :method => 'get' do %>
+
       <div class="input-group">
-        <%= text_field_tag :search, params[:search], class: "form-control" %>
+        <%= text_field_tag :search, params[:search], class: "form-control project-search-input", autocomplete: "off" %>
         <span class= "input-group-btn">
-          <%= submit_tag "Search", :name => nil, class: "btn btn-default" %>
-        </span>
-      </div>
+          <%= submit_tag "Search", :name => nil, class: "btn btn-default btn-search" %> </span> </div>
+
     <% end %>
+
+    </div>
+
+  <div class="col-md-12">
+
+    <!-- <div class="project-progress">
+      <div class="project-progress-bar background-blue" style="width: <%= @percent["fulfilled"] %>%;">
+        <span> ACHIEVED <%= @percent["fulfilled"] %> % </span> </div>
+    </div>
+
+    <div class="project-progress">
+      <div class="project-progress-bar background-blue"  style="width: <%= @percent["blocked"] %>%;">
+        <span>PARTIALLY FULFILLED <%= @percent["blocked"] %> %</span>
+      </div>
+    </div>
+
+    <div class="project-progress">
+      <div class="project-progress-bar background-blue" style="width: <%= @percent["initiated"] %>%;">
+        <span>IN PROGRESS <%= @percent["initiated"] %> %</span>
+      </div>
+    </div>
+
+    <div class="project-progress">
+      <div class="project-progress-bar background-blue"  style="width: <%= @percent["uninitiated"] %>%;">
+        <span>NOT STARTED <%= @percent["uninitiated"] %> %</span>
+      </div>
+    </div> -->
+
   </div>
+
+  <div class="col-md-12">
+
+    <% @projects.each do |p| %>
+
+      <div class="row project-row">
+
+        <div class="col-md-10 project-description">
+          <span class="project-name"> <%= link_to p.title, project_path(p.id) %> </span>
+          <span class="project-text"> <%= truncate_description(p.description) %> </span> </div>
+
+        <div class="col-md-2 project-status">
+          <span class="project-status-color background-<%= status_color(p.status) %>"></span> </div>
+
+      </div>
+
+    <% end %>
+
+    <% if @projects.count < 1 %>
+
+      <div class="row project-search-empty-row">
+
+        <div class="project-search-empty">
+
+          No projects for this search. Go back to <%= link_to "All Projects", projects_path %>,
+            or look at the official <%= link_to "AAP Manifesto 2015", "http://www.aamaadmiparty.org/AAP-Manifesto-2015.pdf" %>. </div>
+
+      </div>
+
+    <% end %>
+
+  </div>
+
 </div>
 
-<!-- Progress meters -->
-<div class="container-fluid" id="progress-meters">
-    <!-- In progress -->
-  <div class="col-md-10 col-md-offset-1">
-    <!-- Achieved -->
-    <div class="project-progress">
-      <div class="project-progress-bar background-blue"  style="width: <%= @num_fulfilled * 100 / @num_total %>%;">
-        <span>ACHIEVED <%= @num_fulfilled  * 100 / @num_total %> %</span>
-      </div>
-    </div>
-
-    <!-- Partially fulfilled -->
-    <div class="project-progress">
-      <div class="project-progress-bar background-blue"  style="width: <%= @num_partially_fulfilled * 100 / @num_total %>%;">
-        <span>PARTIALLY FULFILLED <%= @num_partially_fulfilled * 100 / @num_total %> %</span>
-      </div>
-    </div>
-
-    <div class="project-progress">
-      <div class="project-progress-bar background-blue" style="width: <%= @num_in_progress * 100 / @num_total %>%;">
-        <span>IN PROGRESS <%= @num_in_progress * 100 / @num_total %> %</span>
-      </div>
-    </div>
-
-    <div class="project-progress">
-      <div class="project-progress-bar background-blue"  style="width: <%= @num_not_started * 100 / @num_total %>%;">
-        <span>NOT STARTED <%= @num_not_started  * 100 / @num_total %> %</span>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="container-fluid">
-  <div class="col-md-10 col-md-offset-1" id="project-container">
-  <% @projects.each do |p| %>
-    <div class="row project-row">
-      <div class="project-title col-md-3 text-center">
-        <%= link_to p.title, project_path(p.id) %>
-          <% if true %>
-            <br/>
-            <%= link_to "Delete", project_path(p.id), method: "delete", class: "btn btn-danger", role: "button" %>
-            <%= link_to "Edit", edit_project_path(p.id), method: "get", class: "btn btn-warning", role: "button" %>
-          <% end %>
-      </div>
-      <div class="col-md-8"><%= truncate_description(p.description) %></div>
-      <div class="status-cell col-md-1 text-center"><span class="project-status background-<%= status_color(p.status) %>"></span></div>
-    </div>
-    <hr />
-  <% end %>
-  </div>
-</div>
-
-<div id="disqus_thread" class="col-md-10 col-md-offset-1"></div>
+<!-- <div id="disqus_thread" class="col-md-10 col-md-offset-1"></div> -->
