--- a/app/views/updates/index.html.erb
+++ b/app/views/updates/index.html.erb
@@ -11,15 +11,17 @@
 
 		  		<div class="col-md-10">
 		  			<%= u.event_occured.to_time.strftime('%Y - %^b - %d at %I:%M %p') %>
-		  			&mdash; <%= link_to "Link", u.url, class: "update-link" %> <br/>
-		  			<%= u.description %> </div>
+		  			<% if u.url.length > 0 %>
+			  			&mdash; <%= link_to "Link", u.url, class: "update-link" %>
+		  			<% end %>
+		  			<br/> <%= u.description %> </div>
 
 		  		<div class="col-md-2 buttons">
 		  			<%= button_to approve_update_path(id: u.id), :method => :put do %>
-		  				<% fa_icon "briefcase", {:class => ("done" if current_user.voted_up_on? u)} %>
+		  				<% fa_icon "thumbs-o-up", {:class => ("done" if current_user.voted_up_on? u)} %>
 		  			<% end %>
 		  			<%= button_to reject_update_path(id: u.id), :method => :put do %>
-		  				<% fa_icon "user", {:class => ("done" if current_user.voted_down_on? u)} %>
+		  				<% fa_icon "thumbs-o-down", {:class => ("done" if current_user.voted_down_on? u)} %>
 		  			<% end %>
 		  			</div>
 
